Fri Jan 22 14:59:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/tests/CIAO/Components/SimpleNilFacetProvider.idl:
        * tests/IDL_Test/Included_Component/IC_Bar.idl:
        * tests/IDL_Test/Included_Component/IC_Foo.idl:
          Resolved compiler errors due to pragma ciao lem implementation.

Fri Jan 22 14:52:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/TargetManager/DomainEvents.idl:
          Removed, not used

        * DAnCE/TargetManager/TargetManager_Impl.h:
          Layout changes

Fri Jan 22 14:23:40 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/ContentFilteredTopic.h:
        * connectors/dds4ccm/impl/ndds/ContentFilteredTopic.cpp:
        * connectors/dds4ccm/impl/ndds/DataReader.cpp:
        * connectors/dds4ccm/impl/ndds/StringSeq.h:
          Added operators in order to copy DDS_StringSeq
          to and from DDS::StringSeq.

        * connectors/dds4ccm/impl/ndds/InstanceHandle_t.h:
          Added == and != operator in order to compare a
          DDS_InstanceHandle with a DDS::InstanceHandle_t.

        * connectors/dds4ccm/impl/ndds/QueryCondition.cpp:
          Implemented remaining methods.

        * connectors/dds4ccm/impl/ndds/Reader_T.h:
        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
          Implemented remaining implementation of QueryCondition.

Fri Jan 22 12:46:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Contexts/Context_Impl_Base.cpp:
        * ciao/Contexts/Context_Impl_Base.h:
        * ciao/Contexts/Context_Impl_T.cpp:
        * ciao/Contexts/Context_Impl_T.h:
        * ciao/Servants/Servant_Impl_T.cpp:
          Pass the instance id through the constructor

Fri Jan 22 11:59:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Base/Hello.mpc
        * connectors/ami4ccm/examples/Hello/Connector/AMI.idl
        * connectors/ami4ccm/examples/Hello/Connector/AMI.mpc