@@ -1,3 +1,12 @@
+Sat Jan 23 18:46:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/DomainApplicationManager/Node_Locator.cpp
+        * DAnCE/DomainApplicationManager/Node_Locator.h
+        * DAnCE/ExecutionManager/ExecutionManager_Impl.cpp
+        * DAnCE/ExecutionManager/ExecutionManager_Impl.h
+        * DAnCE/ExecutionManager/ExecutionManager_Module.cpp
+          Unicode fixes
+
 Fri Jan 22 14:59:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * DAnCE/tests/CIAO/Components/SimpleNilFacetProvider.idl:
